Don't show tooltips when dragging to another Dolphin window

BUG: 294533
FIXED-IN: 4.8.1